[tool.poetry]
name = "broker-recommendations"
version = "0.1.0"
description = "Broker recommendations crawler"
authors = ["licijitdas93@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.26.0"
requests = "^2.32.0"
python-dateutil = "^2.9.0"
beautifulsoup4 = "^4.12.0"
webdriver-manager = "^4.0.0"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
black = "^24.0.0"
isort = "^5.13.0"
types-requests = "^2.32.0"

[tool.black]
line-length = 130


[tool.isort]
profile = "black"
line_length = 130
reverse_relative = true
order_by_type = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
